# drf-skeleton

./: .pdm.toml  README.md  pyproject.toml
api/: serializers.py  urls.py  views.py
app/: settings.py  urls.py
base/: models.py
base/migrations/: 0001_initial.py
